// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Summary > should render  1`] = `
<div>
  <div
    aria-disabled="false"
    data-accordion-trigger=""
    data-disabled="false"
    role="button"
    tabindex="-1"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Item 1
    </p>
    <!---->
    <!---->
     
    <!---->
  </div>
  
</div>
`;

exports[`Summary > should render  2`] = `
<div>
  <div
    aria-disabled="false"
    data-accordion-trigger=""
    data-disabled="false"
    role="button"
    tabindex="-1"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Item 2
    </p>
    <!---->
    <!---->
     
    <!---->
  </div>
  
</div>
`;

exports[`Summary > should render using expanded state 1`] = `
<div>
  <div
    aria-disabled="false"
    data-accordion-trigger=""
    data-disabled="false"
    role="button"
    tabindex="-1"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Item 1
    </p>
    <!---->
    <!---->
     
    <!---->
  </div>
  
</div>
`;

exports[`Summary > should render using expanded state 2`] = `
<div>
  <div
    aria-disabled="false"
    data-accordion-trigger=""
    data-disabled="false"
    role="button"
    tabindex="-1"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Item 1
    </p>
    <!---->
    <!---->
     
    <!---->
  </div>
  
</div>
`;
